src/Exercices/4.06 - Troubleshooting/4.06.1 Exercise 1/policy.yml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: restrict-egress
spec:
  endpointSelector:
    matchLabels:
      app: net-tester
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
